Add dependency checking code to the ID handlers
Makes much more sense and will allow simplifying the WorkspaceServer and
the InitWorkspace classes. Will also make it easier to add more ID types
in future as changes to those classes will no longer be necessary.

Next: integrate into the rest of the server and remove dependency checking code from the WorkspaceServer class.